--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
 
         <service
-            android:name=".NotificationListener"
+            android:name=".services.NotificationListener"
             android:exported="true"
             android:label="Notification Listener Service"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
